fixed placement of provider text on mobile

--- a/client/src/Pages/HomePage/hp.css
+++ b/client/src/Pages/HomePage/hp.css
@@ -57,8 +57,8 @@
     }
 
     .providerText {
-        margin-top: -15px;
-        margin-bottom: 30px;
+        /* margin-top: -15px;
+        margin-bottom: 30px; */
         width: 100%;
     }
     
